; ModuleID = '/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_sock_graft.c'
source_filename = "/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_sock_graft.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.socket = type { i32 }
%struct.aa_sk_ctx = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*, %struct.socket*)* @apparmor_sock_graft to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apparmor_sock_graft(%struct.sock* %0, %struct.socket* %1) #0 {
  %3 = alloca %struct.sock*, align 8
  %4 = alloca %struct.socket*, align 8
  %5 = alloca %struct.aa_sk_ctx*, align 8
  store %struct.sock* %0, %struct.sock** %3, align 8
  store %struct.socket* %1, %struct.socket** %4, align 8
  %6 = load %struct.sock*, %struct.sock** %3, align 8
  %7 = call %struct.aa_sk_ctx* @SK_CTX(%struct.sock* %6)
  store %struct.aa_sk_ctx* %7, %struct.aa_sk_ctx** %5, align 8
  %8 = load %struct.aa_sk_ctx*, %struct.aa_sk_ctx** %5, align 8
  %9 = getelementptr inbounds %struct.aa_sk_ctx, %struct.aa_sk_ctx* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = call i64 (...) @aa_get_current_label()
  %14 = load %struct.aa_sk_ctx*, %struct.aa_sk_ctx** %5, align 8
  %15 = getelementptr inbounds %struct.aa_sk_ctx, %struct.aa_sk_ctx* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  br label %16

16:                                               ; preds = %12, %2
  ret void
}

declare dso_local %struct.aa_sk_ctx* @SK_CTX(%struct.sock*) #1

declare dso_local i64 @aa_get_current_label(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
